[package]
name = "libpledge"
description = """
libpledge is a library that provides similar functionality to the
OpenBSD pledge(2) functionality for Rust programs on Linux.
"""
version = "0.1.0"
edition = "2021"

authors = ["Steve Smith <tarkasteve@gmail.com>"]
homepage = "https://github.com/tarka/libpledge/"
repository = "https://github.com/tarka/libpledge/"
license = "ISC"
readme = "README.md"

keywords = ["seccomp", "security", "bpf", "linux"]
categories =["os::linux-apis"]

[workspace]
members = [
    "bpfvm"
]

[dependencies]
bpfvm = { version = "0.1.0", path = "bpfvm", default-features = false }
libc = { version = "0.2.142", features = ["extra_traits"] }
once_cell = "1.17.1"
thiserror = "1.0.40"

[dev-dependencies]
bpfvm = { version = "0.1.0", path = "bpfvm" }
nix = "0.26.2"
log = "0.4.17"
test-log = "0.2.11"
env_logger = "0.10.0"
