[package]
name = "bpfvm"
description = """
`bpfvm` is a small BPF VM implementation and cBPF token 'assembler'. It is
intended for testing cBPF functionality before deployment, e.g. seccomp BPF
filters.
"""
version = "0.1.2"
edition = "2021"

authors = ["Steve Smith <tarkasteve@gmail.com>"]
homepage = "https://github.com/tarka/libpledge/bpfvm/"
repository = "https://github.com/tarka/libpledge/bpfvm/"
license = "ISC"
readme = "README.md"

keywords = ["bpf", "seccomp"]
categories =["development-tools::testing", "network-programming"]

[features]
default = ["vm"]
vm = []

[dependencies]
libc = { version = "0.2.142", features = ["extra_traits"] }
log = "0.4.17"
thiserror = "1.0.40"

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2.11"
